--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -4,6 +4,6 @@ commit = True
 tag = True
 tag_name = {new_version}
 
-[bumpversion:file:color_ops/__init__.py]
+[bumpversion:file:color_operations/__init__.py]
 search = __version__ = "{current_version}"
 replace = __version__ = "{new_version}"
