--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Generated C files from cython
+*.c
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -102,5 +105,3 @@ venv.bak/
 
 # mypy
 .mypy_cache/
-
-color_ops/*.c
