--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -1,12 +1,13 @@
 [package]
-name = "rust"
+name = "color-operations"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
-name = "rust"
+name = "color_operations"
 crate-type = ["cdylib"]
 
 [dependencies]
+numpy = "0.19.0"
 pyo3 = "0.19.0"
