--- a/rust/pyproject.toml
+++ b/rust/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["maturin>=1.1,<2.0"]
 build-backend = "maturin"
 
 [project]
-name = "rust"
+name = "color-operations"
 requires-python = ">=3.7"
 classifiers = [
     "Programming Language :: Rust",
