--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,8 @@ jobs:
           - {name: Windows, python: '3.10', os: windows-latest}
           - {name: Mac, python: '3.10', os: macos-latest}
           - {name: 'Ubuntu', python: '3.10', os: ubuntu-latest}
-          - {name: '3.11', python: '3.11.0-rc.2 - 3.11', os: ubuntu-latest}
+          - {name: '3.12', python: '3.12', os: ubuntu-latest}
+          - {name: '3.11', python: '3.11', os: ubuntu-latest}
           - {name: '3.9', python: '3.9', os: ubuntu-latest}
           - {name: '3.8', python: '3.8', os: ubuntu-latest}
 
