--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,11 +74,12 @@ jobs:
         with:
           platforms: arm64
 
-      - uses: pypa/cibuildwheel@v2.10.2
+      - uses: pypa/cibuildwheel@v2.16.2
         env:
           # https://github.com/mapbox/rio-color/blob/0ab59ad8e2db99ad1d0c8bd8c2e4cf8d0c3114cf/appveyor.yml#L3
           CIBW_SKIP: 'cp27* cp35* pp* *-win32 *-manylinux_i686'
           CIBW_ARCHS_MACOS: x86_64 arm64 universal2
+          CIBW_ARCHS_LINUX: auto aarch64
           # CIBW_TEST_REQUIRES: pytest colormath==2.0.2
           # CIBW_TEST_COMMAND: python -m pytest {project}/tests -v -s
 
