--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -57,7 +57,7 @@ jobs:
 
   build_wheels:
     needs: [tests]
-    if: startsWith(github.event.ref, 'refs/tags') || github.event_name == 'release'
+    # if: startsWith(github.event.ref, 'refs/tags') || github.event_name == 'release'
     name: ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
