--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,8 +3,7 @@ requires = [
   "setuptools",
   "wheel",
   "cython>=0.29.32,<3.0",
-  "oldest-supported-numpy; python_version!='3.8' and platform_machine!='aarch64' and platform_python_implementation == 'PyPy'",
-  "numpy==1.19.3; python_version=='3.8' and platform_machine=='aarch64' and platform_python_implementation != 'PyPy'",
+  "oldest-supported-numpy @ git+https://github.com/vincentsarago/oldest-supported-numpy#patch/update-for-python38-aarch64",
 ]
 
 [tool.coverage.run]
