--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = [
   "setuptools",
   "wheel",
   "cython>=0.29.32,<3.0",
-  "oldest-supported-numpy @ git+https://github.com/vincentsarago/oldest-supported-numpy#patch/update-for-python38-aarch64",
+  "oldest-supported-numpy @ git+https://github.com/vincentsarago/oldest-supported-numpy.git@patch/update-for-python38-aarch64",
 ]
 
 [tool.coverage.run]
