--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
+          python -m pip install numpy -U --no-binary numpy
           python -m pip install -e .["test"]
 
       - name: Run pre-commit
