--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - {name: Windows, python: '3.11', os: windows-latest}
+          - {name: Windows, python: '3.11', os: windows-2019}
           - {name: Mac, python: '3.11', os: macos-latest}
           - {name: 'Ubuntu', python: '3.11', os: ubuntu-latest}
           - {name: '3.12', python: '3.12', os: ubuntu-latest}
@@ -64,7 +64,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest, windows-2019, macos-latest]
 
     steps:
       - uses: actions/checkout@v3
