--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -1,7 +1,14 @@
 [package]
 name = "color-operations"
-version = "0.1.0"
+version = "0.2.0"
 edition = "2021"
+description = "Color-oriented image operations. A port of rio-color."
+readme = "README.md"
+repository = "https://github.com/vincentsarago/color-operations"
+license = "MIT"
+keywords = ["python"]
+categories = []
+rust-version = "1.75"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
@@ -10,7 +17,7 @@ crate-type = ["cdylib"]
 
 [dependencies]
 numpy = "0.21.0"
-pyo3 = "0.21.0"
+pyo3 = { version = "0.21.0", features = ["abi3-py38"] }
 lazy_static = "1.4"
 
 [dev-dependencies]
