--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,30 +1,34 @@
 [build-system]
-requires = [
-  "setuptools",
-  "wheel",
-  "cython>=0.29.32",
-  "oldest-supported-numpy",
+requires = ["maturin>=1.1,<2.0"]
+build-backend = "maturin"
+
+[project]
+name = "color-operations"
+requires-python = ">=3.8"
+dependencies = ["numpy"]
+classifiers = [
+  "Programming Language :: Rust",
+  "Programming Language :: Python :: Implementation :: CPython",
+  "Programming Language :: Python :: Implementation :: PyPy",
 ]
+
+[tool.maturin]
+features = ["pyo3/extension-module"]
+module-name = "color_operations._rust"
+python-source = "python"
 
 [tool.coverage.run]
 branch = true
 parallel = true
 
 [tool.coverage.report]
-exclude_lines = [
-  "no cov",
-  "if __name__ == .__main__.:",
-  "if TYPE_CHECKING:",
-]
+exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
 
 [tool.isort]
 profile = "black"
 known_first_party = ["tipg"]
 known_third_party = ["geojson_pydantic", "buildpg", "pydantic"]
-forced_separate = [
-    "fastapi",
-    "starlette",
-]
+forced_separate = ["fastapi", "starlette"]
 default_section = "THIRDPARTY"
 
 [tool.mypy]
@@ -35,17 +39,17 @@ line-length = 90
 
 [tool.ruff.lint]
 select = [
-    "D1", # pydocstyle errors
-    "E",  # pycodestyle errors
-    "W",  # pycodestyle warnings
-    "F",  # flake8
-    "C",  # flake8-comprehensions
-    "B",  # flake8-bugbear
+  "D1", # pydocstyle errors
+  "E",  # pycodestyle errors
+  "W",  # pycodestyle warnings
+  "F",  # flake8
+  "C",  # flake8-comprehensions
+  "B",  # flake8-bugbear
 ]
 ignore = [
-    "E501",  # line too long, handled by black
-    "B008",  # do not perform function calls in argument defaults
-    "B905",  # ignore zip() without an explicit strict= parameter, only support with python >3.10
+  "E501", # line too long, handled by black
+  "B008", # do not perform function calls in argument defaults
+  "B905", # ignore zip() without an explicit strict= parameter, only support with python >3.10
 ]
 
 [tool.ruff.lint.mccabe]
