--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,9 +4,9 @@ name: CI
 on:
   push:
     branches:
-    - main
+      - main
     tags:
-    - '*'
+      - "*"
   pull_request:
 
 jobs:
@@ -17,20 +17,25 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - {name: Windows, python: '3.11', os: windows-2019}
-          - {name: Mac, python: '3.11', os: macos-latest}
-          - {name: 'Ubuntu', python: '3.11', os: ubuntu-latest}
-          - {name: '3.12', python: '3.12', os: ubuntu-latest}
-          - {name: '3.11', python: '3.11', os: ubuntu-latest}
-          - {name: '3.9', python: '3.9', os: ubuntu-latest}
-          - {name: '3.8', python: '3.8', os: ubuntu-latest}
+          - { name: Windows, python: "3.11", os: windows-2019 }
+          - { name: Mac, python: "3.11", os: macos-latest }
+          - { name: "Ubuntu", python: "3.11", os: ubuntu-latest }
+          - { name: "3.12", python: "3.12", os: ubuntu-latest }
+          - { name: "3.11", python: "3.11", os: ubuntu-latest }
+          - { name: "3.9", python: "3.9", os: ubuntu-latest }
+          - { name: "3.8", python: "3.8", os: ubuntu-latest }
 
     steps:
       - uses: actions/checkout@v3
+
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@stable
+
       - name: Set up Python ${{ matrix.python }}
         uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python }}
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -55,74 +60,3 @@ jobs:
           flags: unittests
           name: ${{ matrix.python }}
           fail_ci_if_error: false
-
-  build_wheels:
-    needs: [tests]
-    if: startsWith(github.event.ref, 'refs/tags') || github.event_name == 'release'
-    name: ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-latest, windows-2019, macos-latest]
-
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Set up QEMU
-        if: runner.os == 'Linux'
-        uses: docker/setup-qemu-action@v2
-        with:
-          platforms: arm64
-
-      - uses: pypa/cibuildwheel@v2.16.5
-        env:
-          # https://github.com/mapbox/rio-color/blob/0ab59ad8e2db99ad1d0c8bd8c2e4cf8d0c3114cf/appveyor.yml#L3
-          CIBW_SKIP: 'cp27* cp35* pp* *-win32 *-manylinux_i686 *musllinux*'
-          CIBW_ARCHS_MACOS: x86_64 arm64 universal2
-          CIBW_ARCHS_LINUX: auto aarch64
-          # CIBW_TEST_REQUIRES: pytest colormath==2.0.2
-          # CIBW_TEST_COMMAND: python -m pytest {project}/tests
-
-      - uses: actions/upload-artifact@v3
-        with:
-          path: ./wheelhouse
-
-  build_sdist:
-    needs: [tests]
-    if: startsWith(github.event.ref, 'refs/tags') || github.event_name == 'release'
-    name: Build source distribution
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-
-      - uses: actions/setup-python@v4
-        name: Install Python
-        with:
-          python-version: '3.10'
-
-      - name: Install dependencies
-        run: |
-          python -m pip install numpy Cython
-
-      - name: Build sdist
-        run: python setup.py sdist
-
-      - uses: actions/upload-artifact@v3
-        with:
-          path: dist/*.tar.gz
-
-  upload_pypi:
-    needs: [build_wheels, build_sdist]
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/download-artifact@v2
-        with:
-          name: artifact
-          path: dist
-
-      - uses: pypa/gh-action-pypi-publish@release/v1
-        with:
-          user: ${{ secrets.PYPI_USERNAME }}
-          password: ${{ secrets.PYPI_PASSWORD }}
-          # To test: repository_url: https://test.pypi.org/legacy/
