--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,13 +7,27 @@ name = "color-operations"
 requires-python = ">=3.8"
 dependencies = ["numpy"]
 classifiers = [
+  "Development Status :: 5 - Production/Stable",
+  "Intended Audience :: Developers",
+  "Intended Audience :: Science/Research",
+  "License :: OSI Approved :: MIT License",
+  "Programming Language :: Python :: 3.10",
+  "Programming Language :: Python :: 3.11",
+  "Programming Language :: Python :: 3.12",
+  "Programming Language :: Python :: 3.8",
+  "Programming Language :: Python :: 3.9",
   "Programming Language :: Rust",
-  "Programming Language :: Python :: Implementation :: CPython",
-  "Programming Language :: Python :: Implementation :: PyPy",
+  "Topic :: Multimedia :: Graphics :: Graphics Conversion",
+  "Topic :: Scientific/Engineering :: GIS",
 ]
+authors = [{ name = "Vincent Sarago", email = "vincent@developmentseed.com" }]
 # This version overwrites the version in Cargo.toml, so ideally we wouldn't have
 # a version identifier here, but pre-commit fails without it.
 version = "0.2.0"
+
+[project.optional-dependencies]
+test = ["pytest", "colormath==2.0.2", "pytest-cov"]
+dev = ["pre-commit"]
 
 [tool.maturin]
 features = ["pyo3/extension-module"]
